// Copyright 2021 Lightbend Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

// tag::receiving-json-messages[]
syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/any.proto";
import "akkaserverless/annotations.proto";

// This is the Pub/Sub listener to contact the Shopping Cart service.
package shopping.cart.api;

option java_outer_classname = "ShoppingCartTopic";
// end::receiving-json-messages[]
// Read from a Pub/Sub message with CloudEvent metadata
message TopicOperation {
    string operation = 1;
    string cart_id = 2;
    string product_id = 3;
    string name = 4;
    int32 quantity = 5;
}
// tag::receiving-json-messages[]
service ShoppingCartTopicService {
    option (akkaserverless.service) = {
        type : SERVICE_TYPE_ACTION
    };
    // end::receiving-json-messages[]
    rpc ProtobufFromTopic(TopicOperation) returns (google.protobuf.Empty) {
        option (akkaserverless.method).eventing.in = {
            topic:  "shopping-cart-protobuf-cloudevents"
        };
    }
    // tag::receiving-json-messages[]
    rpc JsonFromTopic(google.protobuf.Any) returns (google.protobuf.Empty) {
        option (akkaserverless.method).eventing.in = {
            topic:  "shopping-cart-json"
        };
    }
}
// end::receiving-json-messages[]